Fixing style for element overflowing their containers on the page
Removing more ie6 shims

--- a/web-app/css/source/layout.imod.css
+++ b/web-app/css/source/layout.imod.css
@@ -56,8 +56,7 @@
 
 table.inner-table {
 	position: relative;
-	left: -62.5px;
-	width: 113%;
+	width: 100%;
 	height: 100%;
 }
 
